# me700_Assignment_1

./: .coverage  README.md  project.toml  pyproject.toml
.github/: workflow
.github/workflows/: tests.yml
Assignment_1_Part_1/: newtons_method_functions.py  tests.py  tutorials.py
src/bisectionmethod.egg-info/: PKG-INFO  SOURCES.txt
src/newtonsmethod/: newtonsmethod_functions.py
src/newtonsnmethod.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_newtonsmethod_functions.py
tutorials/: tutorials.py
